lab-applications/dns-pihole/overlays/dns-pihole-1/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns-pihole-1
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
