lab-applications/dns-pihole/overlays/dns-pihole-1/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-pihole-1
  labels:
    app: dns-pihole-1
    service: dns-pihole
spec:
  selector:
    matchLabels:
      app: dns-pihole-1
      service: dns-pihole
  replicas: 1
  template:
    metadata:
      labels:
        app: dns-pihole-1
        service: dns-pihole
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "service"
                    operator: In
                    values:
                      - dns-pihole
              topologyKey: "kubernetes.io/hostname"
              namespaceSelector: {}
      containers:
        - name: dns-pihole-1
          securityContext:
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
                - NET_ADMIN
                - SETFCAP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          image: docker.io/pihole/pihole:latest
          ports:
            - containerPort: 53
            - containerPort: 80
