lab-applications/dns-pihole/overlays/dns-pihole-1/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dns-pihole-1-tcp
  labels:
    app: dns-pihole-1
    service: dns-pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.42.11
    metallb.universe.tf/address-pool: lab-pool
    metallb.universe.tf/allow-shared-ip: "key-to-share-192.168.42.11"
spec:
  ports:
    - port: 53
      protocol: TCP
      targetPort: 53
      name: dns-tcp
  selector:
    app: dns-pihole-1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: dns-pihole-1-udp
  labels:
    app: dns-pihole-1
    service: dns-pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.42.11
    metallb.universe.tf/address-pool: lab-pool
    metallb.universe.tf/allow-shared-ip: "key-to-share-192.168.42.11"
spec:
  ports:
    - port: 53
      protocol: UDP
      targetPort: 53
      name: dns-udp
  selector:
    app: dns-pihole-1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: dns-pihole-1-web
  labels:
    app: dns-pihole-1
    service: dns-pihole
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: dns-http
  selector:
    app: dns-pihole-1
  type: ClusterIP
